force-app/main/default/objects/GLAccountDetails__mdt/GLAccountDetails__mdt.object-meta.xml
<CustomObject>
    <label>GL Account Details</label>
    <pluralLabel>GL Account Details</pluralLabel>
</CustomObject>