force-app/main/default/objects/GLAccountDetails__mdt/fields/CorpCode__c.field-meta.xml
<CustomField>
    <fullName>CorpCode__c</fullName>
    <label>Corp Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>