force-app/main/default/objects/GLAccountDetails__mdt/fields/GLAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>GLAccountNumber__c</fullName>
    <label>GL Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>