force-app/main/default/objects/GLAccountDetails__mdt/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>Record Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>